# advent2019

./: advent2019.cabal
app/: Djistra.hs  IntCode.hs  day01.hs  day02.hs  day03.hs  day04.hs  day05.hs  day06.hs  day07.hs  day08.hs  day09.hs  day10.hs  day11.hs  day12.hs  day13.hs  day14.hs  day15.hs  day16.hs  day17.hs  day18.hs  day19.hs  day20.hs  day21.hs  day22.hs  day23.hs  day24.hs  day25.hs
